eks/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp-backend
  labels:
    app: registerapp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registerapp-backend
  template:
    metadata:
      labels:
        app: registerapp-backend
    spec:
      containers:
      - name: backend
        image: 264570364318.dkr.ecr.ap-south-1.amazonaws.com/register-backend:1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 # backend port
